# drone_flight_controller

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakePresets.json  Drone-STM32F746 Debug.launch  Drone-STM32F746.ioc  README.md  STM32F746ZGTX_FLASH.ld  build.ninja  cmake_install.cmake
Core/Inc/: main.h  myscpi.h  sensor.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
Core/Src/: dma.c  freertos.c  gpio.c  i2c.c  main.c  myscpi.c  sensor.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  tim.c
Debug/: Drone-STM32F746.elf  Drone-STM32F746.list  Drone-STM32F746.map  makefile
Debug/Core/Src/: main.su  stm32f7xx_hal_msp.su  stm32f7xx_it.su
Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
Dshot/: dshot.c  dshot.h
Dshot/Inc/dshot/: dshot.h
Dshot/Src/: dshot.c  dshot.cpp
ICP-10101/Inc/: icp10101.h
ICP-10101/Src/: icp10101.c
USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
triplets/: arm-none-eabi-mingw-static.cmake
